<resources>
    <string name="app_name">project</string>
    <string name="password">Password</string>
    <string name="athelet_or_coach">Athlete or Coach?</string>
    <string name="address">Address</string>
    <string name="tel_number">Tel number</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="Sign_up">Sign up</string>
    <string name="go_to_register">Do not have an account yet?</string>
    <string name="go_to_login">Already have an account?</string>
    <string name="Update">Update</string>
    <string name="back_to_main">back to main</string>
    <string name="telephone">Telephone #</string>
    <string name="role">Role</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email Address</string>
    <string name="title">Title</string>
    <string name="sign_up">Sign up</string>
    <string name="update">Update</string>
    <string name="content">content</string>
    <string name="coach_post">coachpost</string>
    <string name="post">post</string>
    <string name="return_main">return main</string>
    <string name="athlete_psot">athlete post</string>
    <string name="textview">textviex</string>
    <string name="contacts">Contacts</string>
    <string name="add">Add</string>
    <string name="Entery_Content">TextView</string>
    <string name="textview3">TextView</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="back">Back</string>
    <string name="total_steps_is">Total Steps is:</string>
    <string name="Post">Post</string>
    <string name="start_training">Start training</string>
    <string name="view_friends">View Friends</string>
    <string name="view_athlete_data">View athlete data</string>
</resources>
