...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".check_friend_request">

    <TextView
        android:id="@+id/message"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="36dp"
...
