...
            android:paddingTop="15dp"
            android:textColorHint="#e0e0e0"
            android:textCursorDrawable="@drawable/color_cursor" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
...
